Fixing remaining flickering line at the top of the waterfall.

--- a/htdocs/css/openwebrx.css
+++ b/htdocs/css/openwebrx.css
@@ -304,6 +304,7 @@ input[type=range]:disabled {
 	width: 100%;
 	height: 201px;
 	will-change: transform;
+	margin-top: -1px;
 }
 
 #openwebrx-log-scroll
